--- a/src/index.css
+++ b/src/index.css
@@ -18,12 +18,6 @@
   scroll-behavior: smooth;
 }
 
-.hero {
-  background-image: url("background-2.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
 .text-gradient {
   background: linear-gradient(
     91.03deg,
@@ -73,6 +67,9 @@
     #6d6d6d -78.47%,
     #11101d 91.61%
   );
+}
+.bg-red-gradient {
+  background: linear-gradient(180deg, #f5f5f5 0%, #ffd7dd 100%);
 }
 
 .bg-gray-gradient {
@@ -144,10 +141,7 @@
   background: linear-gradient(90deg, #f4c4f3 0%, #fc67fa 100%);
   filter: blur(900px);
 }
-.red-gradient {
-  background: linear-gradient(180deg, #f5f5f5 0%, #ffd7dd 100%);
-  filter: blur(90px);
-}
+
 .white__gradient {
   background: rgba(255, 255, 255, 0.6);
   filter: blur(750px);
