--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,13 @@
     #6d6d6d -78.47%,
     #11101d 91.61%
   );
+
+  --brown-gradient: linear-gradient(
+    180.61deg,
+    rgba(255, 43, 6, 0.38) -13.21%,
+    #e34643 160.94%
+  );
+
   --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
 }
 
@@ -123,7 +130,7 @@
 }
 
 .feature-card:hover {
-  background: var(--black-gradient);
+  background: var(--brown-gradient);
   box-shadow: var(--card-shadow);
 }
 
