--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@
 .bg-orange-gradient-2 {
   background: linear-gradient(90.12deg, #ff2b06 0.13%, #f39a32 108.11%);
 }
-.bg-gray {
+.bg-grey {
   background-color: gainsboro;
 }
 
